--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Assignment1": {
+    "Route_Assignment1_Angular": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/assignment1",
+            "outputPath": "dist/Route_Assignment1_Angular",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -69,10 +69,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "Assignment1:build:production"
+              "browserTarget": "Route_Assignment1_Angular:build:production"
             },
             "development": {
-              "browserTarget": "Assignment1:build:development"
+              "browserTarget": "Route_Assignment1_Angular:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -80,7 +80,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Assignment1:build"
+            "browserTarget": "Route_Assignment1_Angular:build"
           }
         },
         "test": {
